# razmetka

./: .gitignore  .gitignore.swp  CMakeLists.txt  RazmDoxy  buter_koef.txt  cp_rm_script
include/: Afib.h  All_leads.h  LeadII_V.h  Leads_info.h  add_structs.h  facade_of_razmetka.cpp  facade_of_razmetka.h  functions.h  lead_checks.h  leads.h  one lead.h  ouput_struct_of_pathlogies.h  pat_storage.h  point_of_intersection.h
src/: A_fibr_and_flutter.cpp  LeadII_V.cpp  LeadII_getters.cpp  RMSSD.cpp  Shennon.cpp  add_struct.cpp  adding_mathods_of_storage.cpp  all_leads.cpp  allorhythm.cpp  analyse of temporal extrasystoles.cpp  approx.cpp  casual_outliers.cpp  check_VT.cpp  check_form_of_V_beat.cpp  check_last_four_peaks.cpp  check_peak.cpp  checking_peak_with_the_main_S.cpp  create_list_of_pathlogies.cpp  decision.cpp  deriv_of_signal.cpp  facade_of_razmetka.cpp  find_VT.cpp  find_of_Q_and_R.cpp  finding_of_P.cpp  finding_of_R.cpp  finding_of_S.cpp  finding_of_T_ST.cpp  first_check_of_anormal_RR.cpp  for_high_S.cpp  functions.cpp  get_new_peaks.cpp  initialization.cpp  lead_checks.cpp  lead_control.cpp  methods_of_storage_of_pat.cpp  new_filter.cpp  one_lead.cpp  parameters_of_ST.cpp  parameters_of_rhythm.cpp  point_of_intersection.cpp  (+15 more)
